# scramble

./: .gitignore  .gitmodules  =0.2.0  CLAUDE.md  DEVELOPMENT.md  FIX_CONTEXT_README.md  MANIFEST.in  README.md  TODO.md  TROUBLESHOOTING.md  docker-compose.yml  dump.rdb  post_install.py  pyproject.toml  requirements-milvus.txt  requirements.txt  setup.py  test_fix.py
boneyard/core/: api.py  app_bak.py  compressor.py  context.py  model_coordinator.py  stats.py
docs/: CAPTAINS_LOG.md  CLAUDE_README.md  CONTEXT_FIXES.md  DO_THE_CHORES.md  FIPA_INTEGRATION.md  MAGICSCROLL_REDIS.md  SQLITE_SETUP.md  SQLITE_VEC_INSTALL.md  THIS_EXPLAINS_EVERYTHING.md  VECTOR_SEARCH_GUIDE.md  neo4j_implementation_summary.md
docs/architecture/: compression.md  identity.md  ramble_maxx_design_20241214.md  storage.md
docs/architecture_diagrams/: interface_base.py  interface_cluster_01.md  interface_cluster_02.md  interface_cluster_03.md  scroll_01.md
docs/index/: llama_index_ext_index.json  scramble_index.json
docs/living_room/: layout.md
docs/magic_scroll/: ms_scroll_overview.md  ms_sequence.md
docs/planning/: milestones.md
docs/pymermaider/: core.md  interface.md
docs/scrambled_archive_do_not_read/: scroll.md  testing.md  workflow.md
docs/session_histories/: Nov_8_6:34a
docs/the_garden_of_research_ideas/: DATA_ARCHIVE_INGESTION.md  progDS.md
living_room/: N30M3N4.md
ramble/: __init__.py  app.py  context_controller.py
ramble/commands/: config.py  inspect.py  reindex.py  stats.py
ramble/handlers/: commands.py  debug.py  messages.py
ramble/ui/: console.py  panels.py  welcome.py
ramblemaxx/: __init__.py  __main__.py  app.py  terminal.py
ramblemaxx/styles/: maxx.tcss
ramblemaxx/tools/: __init__.py  code.py  docs.py  ui_tools.py  viz.py
ramblemaxx/ui/: chat.py  code.py  themes.py
scramble/: __init__.py  __init__.pyi  __main__.py  config.py
scramble/config/: models.example.yaml  providers.example.yaml
scramble/coordinator/: __init__.py  active_conversation.py  coordinator.py  enhanced_conversation.py  enhanced_coordinator.py  fipa_integration.py  message_enricher.py  temporal_processor.py
scramble/core/: api.py  config_manager.py  interface.py  scroll.py  scroll_manager.py
scramble/interface/: __init__.py  interface_base.py  maxx_interface.py  message_controller.py  observer_concept.py  ramble_interface.py  tool_controller.py
scramble/magicscroll/: __init__.py  chroma_client.py  magic_scroll.py  ms_entity.py  ms_entry.py  ms_examples  ms_examples.py  ms_fipa.py  ms_graph.py  ms_index.py  (+5 more)
scripts/: backup_neo4j.sh  migrate_contents.py
tests/: test_SemanticCompressor.py  test_SemanticCompressorTest.py  test_anthropic_provider.py  test_cli.py  test_compressor.py  test_context_handling.py  test_fipa_integration.py  test_ollama_model.py
tools/: backup_exocortex.sh  check_db.py  check_sqlite_vec.py  create_milvus_index.py  custom_milvus_index.py  do_the_chores.py  downgrade_pymilvus.sh  fix_milvus_collection.py  fix_milvus_index.py  fix_milvus_index_direct.py  fix_milvus_with_pymilvus257.py  fix_sqlite_vec.sh  fix_sqlite_vec_macos.sh  generate_code_index.py  init_neo4j.sh  rebuild_milvus_collection.py  recreate_milvus_collection.py  recreate_milvus_index.py  redis_env.sh  reinstall_sqlite_vec.sh  restore_exocortex.sh  start_ramble.sh  start_ramble_with_magicscroll.sh  start_ramble_with_sqlite.sh  test_milvus_lite.py  test_sqlite_vec_simple.py  test_vector_search.py  test_vector_store.sh
(+82 files in other folders)
