[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scramble"
version = "0.1.0"
authors = [{ name = "lux" }]
description = "Semantic Compression for AI Dialogue"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "rich",
    "nltk",
    "anthropic",
    "click",
    "sentence-transformers>=2.5.0",
    "numpy",
    "dateparser",
    "textual",
    "pyte",
    "redis>=5.0.1",
    "llama-index-core",  # Updated for latest Neo4j support
    "llama-index-storage-docstore-redis",
    "llama-index-graph-stores-neo4j", # Neo4j graph store
    "duckdb",
    "neo4j==5.26.0",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",
    "ollama>=0.1.6",
    "pydantic>=2.5.3",
    "torch",
    "types-redis",
    "pytest",
    "aiofiles",
]

[project.scripts]
ramble = "ramble.app:cli"
maxx = "ramblemaxx.app:RambleMaxx.run" 

[tool.hatch.build.targets.wheel]
packages = ["scramble", "ramble", "ramblemaxx"]

[tool.hatch.metadata]
allow-direct-references = true